# dotfiles

./: .bash_profile  .bashrc  .gitignore  .gitmodules  .zshrc  README  README.md  configuration.nix  default.nix  default.nix.disable  flake.nix
.config/: bashrc
.config/alacritty/: alacritty.toml
.config/hypr/: hyprland.conf  hyprtheme.conf
.config/nvim/: lazy-lock.json
.config/quickshell/: CMakeLists.txt  CMakePresets.json  main.cpp  shell.qml
.config/rofi/: config.rasi
desktop/: default.nix  flake.nix  home.nix
device/desktop/: boot.nix  default.nix  home.nix  hyprland.nix
device/laptop/: battery.nix  boot.nix  default.nix
devices/: all-devices.nix
devices/desktop/: default.nix
home/: core.nix
home/program/: default.nix  git.nix
install/: setup.sh
module/: default.nix  module-list.nix  system.nix  theme.nix
module/coding/: default.nix
module/graphics/: amd.nix  default.nix  nvidia.nix  vaapi.nix
module/nix/: default.nix
module/optimize/: default.nix  docker.nix  kernal.nix  network_manager.nix
module/program/: default.nix
module/system/: audio.nix  boot.nix  default.nix  fonts.nix  locales.nix  services.nix  xdg.nix
module/theme/: dark.nix  default.nix
nixosModules/: default.nix
nixosModules/graphics/: amd.nix  default.nix  intel.nix  nvidia.nix
nixosModules/nix/: default.nix
nixosModules/system/: audio.nix  boot.nix  default.nix  fonts.nix  locales.nix  services.nix
overlays/ani-cli/: flake.nix
overlays/free-coding-models/: flake.nix
overlays/hid-send/: flake.nix  hid_send.cpp
users/: default.nix  lex.nix
(+66 files in other folders)
